--- a/index.html
+++ b/index.html
@@ -1,47 +1,132 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>反応時間テスト</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 1.2em;
+      margin: 10px;
+    }
+
+    select {
+      font-size: 1em;
+      padding: 5px 10px;
+      margin: 10px;
+    }
+
+    label {
+      font-size: 1em;
+      margin-right: 10px;
+    }
+
+    #signalText {
+      font-size: 2em;
+      margin: 20px;
+      color: red;
+    }
+
+    .log-box {
+      margin: 20px auto;
+      max-width: 500px;
+      font-size: 0.9em;
+      text-align: left;
+    }
+
+    .log-box h3 {
+      text-align: center;
+    }
+  </style>
+</head>
 <body>
+
   <h1>反応時間テスト</h1>
-  <!-- 音の選択 -->
-  <label for="soundSelect">使用する音を選んでください：</label>
-  <select id="soundSelect">
-    <option value="beep1.mp3">音1</option>
-    <option value="beep2.mp3">音2</option>
-    <option value="beep3.mp3">音3</option>
-    <option value="beep4.mp3">音4</option>
-    <option value="beep5.mp3">音5</option>
-  </select>
-  <button id="previewBtn">試聴</button> <!-- 試聴ボタン -->
 
-  <br><br>
+  <div>
+    <label for="frequencySelect">使用する音の周波数を選んでください：</label><br>
+    <select id="frequencySelect">
+      <option value="500">500Hz</option>
+      <option value="750">750Hz</option>
+      <option value="1000" selected>1000Hz（デフォルト）</option>
+      <option value="1500">1500Hz</option>
+      <option value="2000">2000Hz</option>
+    </select>
+    <button id="previewBtn">試聴</button>
+  </div>
 
-  <button id="startBtn">スタート</button>
-  <button id="reactBtn">見えたら/音が鳴ったら押す！</button>
+  <div>
+    <button id="startBtn">スタート</button>
+    <button id="reactBtn">見えたら/音が鳴ったら押す！</button>
+  </div>
+
   <p id="signalText"></p>
   <p id="result"></p>
   <p id="errorMsg" style="color: red;"></p>
 
-  <!-- ログはそのまま -->
+  <div class="log-box">
+    <h3>光の反応履歴（最大10件）</h3>
+    <ul id="visualLog"></ul>
+    <p id="visualCount"></p>
+    <p id="visualAvg"></p>
+  </div>
+
+  <div class="log-box">
+    <h3>音の反応履歴（最大10件）</h3>
+    <ul id="audioLog"></ul>
+    <p id="audioCount"></p>
+    <p id="audioAvg"></p>
+  </div>
 
   <script>
     const startBtn = document.getElementById("startBtn");
     const reactBtn = document.getElementById("reactBtn");
     const previewBtn = document.getElementById("previewBtn");
-    const soundSelect = document.getElementById("soundSelect");
+    const frequencySelect = document.getElementById("frequencySelect");
+
+    const signalText = document.getElementById("signalText");
+    const result = document.getElementById("result");
+    const errorMsg = document.getElementById("errorMsg");
+
+    const visualLogEl = document.getElementById("visualLog");
+    const audioLogEl = document.getElementById("audioLog");
+    const visualAvgEl = document.getElementById("visualAvg");
+    const audioAvgEl = document.getElementById("audioAvg");
+    const visualCountEl = document.getElementById("visualCount");
+    const audioCountEl = document.getElementById("audioCount");
 
     let startTime = 0;
     let actionType = "";
     let ready = false;
     let locked = false;
 
-    const visualLog = [], audioLog = [];
+    const visualLog = [];
+    const audioLog = [];
 
-    // 選択された音ファイルを再生
-    function playSelectedSound() {
-      const audio = new Audio(soundSelect.value);
-      audio.play();
+    function playTone(frequency) {
+      const context = new (window.AudioContext || window.webkitAudioContext)();
+      const oscillator = context.createOscillator();
+      const gain = context.createGain();
+
+      oscillator.type = 'sine';
+      oscillator.frequency.setValueAtTime(frequency, context.currentTime);
+      oscillator.connect(gain);
+      gain.connect(context.destination);
+
+      gain.gain.setValueAtTime(0.2, context.currentTime); // 音量調整
+      oscillator.start();
+      oscillator.stop(context.currentTime + 0.2); // 0.2秒鳴らす
     }
 
     previewBtn.onclick = () => {
-      playSelectedSound();
+      const freq = parseInt(frequencySelect.value);
+      playTone(freq);
     };
 
     function updateLog(log, newTime, logEl, avgEl, countEl) {
@@ -69,7 +154,8 @@
           ready = true;
 
           if (actionType === "sound") {
-            playSelectedSound();  // 選択した音を再生
+            const freq = parseInt(frequencySelect.value);
+            playTone(freq);
           } else {
             signalText.textContent = "今だ！";
           }
@@ -101,3 +187,4 @@
     };
   </script>
 </body>
+</html>
